# rknn-yolov3

./: CMakeLists.txt  config.txt  yolov3_320.cpp  yolov3_416.cpp  yolov3_608.cpp  yolov3_608_syj.cpp  yolov3_tiny.cpp
src/: config.cpp  config.h
src/screen/: screen.cpp
